# lab-report-assistant

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
server/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  entrypoint.sh  pyproject.toml  worker_e2e_verify.py
server/alembic/: env.py
server/alembic/versions/: 0001_create_projects_table.py  0002_create_requirement_tables.py  0003_create_source_and_evidence_tables.py  (+5 more)
server/app/: main.py
server/scripts/: __init__.py  cleanup_expired_data.py  docker_worker_verify.ps1
server/tests/: conftest.py  test_analysis_api.py  test_analysis_plan_provider.py  test_analysis_service.py  test_cleanup_expired_data.py  test_cleanup_integration.py  test_cleanup_safety.py  test_cleanup_script.py  test_data_retention_config.py  test_dataset_parser.py  test_datasets_api.py  test_datasets_service.py  test_deepseek_client.py  test_deepseek_providers.py  test_document_readers.py  test_evidence_api.py  test_evidence_service.py  test_execution_api.py  test_http_fetcher.py  test_jobs_service.py  test_llm_cache.py  test_outline_provider.py  test_outline_worker_handlers.py  test_outlines_api.py  test_outlines_service.py  test_parsers.py  test_ppt_config.py  test_project_service.py  test_python_executor.py  test_renderers.py  test_requirement_api.py  test_requirement_service.py  test_source_api.py  test_source_security.py  test_source_service.py  test_sources_api.py  test_sources_service.py  test_word_template.py  test_worker_handlers.py
server/worker/: handlers.py  main.py
skills/: VENDOR.md
(+216 files in other folders)
