[project]
name = "lab-report-assistant"
version = "0.1.0"
description = "实验报告助手 API"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.100.0",
  "pydantic>=2.0.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.10.0",
  "uvicorn>=0.20.0",
  "python-docx>=1.0.0",
  "python-pptx>=1.0.2",
  "python-multipart>=0.0.5",
  "httpx>=0.24.0",
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "pypdf>=4.0.0",
  "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "httpx>=0.24.0",
  "httpx2>=2.0.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "data*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra"]
